--- a/pom.xml
+++ b/pom.xml
@@ -4,30 +4,35 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>dad.template</groupId>
-	<artifactId>JavaFX</artifactId>
+	<groupId>aed.proyecto.hibernate</groupId>
+	<artifactId>Hibernate</artifactId>
 	<version>1.0.0</version>
 
-	<name>JavaFXProjectTemplate</name>
-	<description>Proyecto base en Eclipse para Maven con soporte para JavaFX 11</description>
-
 	<properties>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>14</maven.compiler.target>
+		<maven.compiler.source>14</maven.compiler.source>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
-		<exec.mainClass>dad.template.javafx.Main</exec.mainClass>
+		<exec.mainClass>aed.proyecto.hibernate.Main</exec.mainClass>
 	</properties>
 
 	<dependencies>
+		<!-- HIBERNATE -->
 		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-controls</artifactId>
-			<version>14.0.1</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-agroal</artifactId>
+			<version>5.3.7.Final</version>
 		</dependency>
+		<!-- MYSQL DRIVER -->
 		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
-			<version>14.0.1</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.18</version>
+		</dependency>
+		<!-- JAXB -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.4.0-b180830.0438</version>
 		</dependency>
 	</dependencies>
 
